@@ -1,4 +1,4 @@
-java -jar ejecutable.jar
+java --module-path ".\javafx-sdk-16\lib" --add-modules javafx.controls -jar ejecutable.jar
 @echo off
 
 pause
